fix(prompt-textarea/attach-files): fix `Attach files` svg icon misalignment (#66)
- Adjusted the positioning of the `Attach Files` svg icon to fix misalignment in the Y-axis
- Ensured proper alignment and visual consistency in the prompt textarea

Changes summary:
    - Fixed the misalignment of the `Attach Files` svg icon in the prompt textarea.

--- a/src/sass/elements/_right--textarea.scss
+++ b/src/sass/elements/_right--textarea.scss
@@ -59,7 +59,7 @@ main form {
 
 			/* 📎 "Attach files" svg */
 			button:has(> svg) {
-				margin-bottom: calc(var(--p-prompt-textarea) / 2);
+				// margin-bottom: calc(var(--p-prompt-textarea) / 2);
 
 				svg {
 					color: var(--c-accent) !important;
